--- a/index.html
+++ b/index.html
@@ -20,28 +20,162 @@
         </button>
         <div class="collapse navbar-collapse" id="myNavbar">
             <div class="container-fluid">
-               <div class="row">
-                <!--sidebar-->
-             <div class="col-xl-2 col-lg-3 col-md-4 fixed-top sidebar">
-                <a href="#" class="navbar-brand text-white d-block mx-auto text-center py-3 mb-4 botton-border">CodeAndCreate</a>
-                <div class="bottom-border pb-3">
-                    <img src="images/img_avatar.png" width="50" class="rounded-circle mr-3">
-                    <a href="#" class="text-white">Helen Smith</a>
+                <div class="row">
+                    <!--sidebar-->
+                    <div class="col-xl-2 col-lg-3 col-md-4 fixed-top sidebar">
+                        <a href="#"
+                            class="navbar-brand text-white d-block mx-auto text-center py-3 mb-4 botton-border">CodeAndCreate</a>
+                        <div class="bottom-border pb-3">
+                            <img src="images/img_avatar.png" width="50" class="rounded-circle mr-3">
+                            <a href="#" class="text-white">Helen Smith</a>
 
+                        </div>
+                        <ul class="navbar-nav flex-column mt-4">
+                            <li class="nav-item"><a href="#" class="nav-link text-white p-3 mb-2 current"><i
+                                        class="fas fa-home text-light fa-lg mr-3"></i>Dashboard</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link text-white p-3 mb-2 sidebar-link"><i
+                                        class="fas fa-user text-light fa-lg mr-3"></i>Profile</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link text-white p-3 mb-2 sidebar-link"><i
+                                        class="fas fa-envelope text-light fa-lg mr-3"></i>Inbox</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link text-white p-3 mb-2 sidebar-link"><i
+                                        class="fas fa-shopping-cart text-light fa-lg mr-3"></i>Sales</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link text-white p-3 mb-2 sidebar-link"><i
+                                        class="fas fa-home text-light fa-lg mr-3"></i>Analytic</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link text-white p-3 mb-2 sidebar-link"><i
+                                        class="fas fa-home text-light fa-lg mr-3"></i>Charts</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link text-white p-3 mb-2 sidebar-link"><i
+                                        class="fas fa-home text-light fa-lg mr-3"></i>Tables</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link text-white p-3 mb-2 sidebar-link"><i
+                                        class="fas fa-home text-light fa-lg mr-3"></i>Setting</a></li>
+                        </ul>
+                    </div>
+                    <!--end sidebar-->
+
+                    <!--top nav-->
+                    <div class="col-xl-10 col-lg-9 col-md-8 ml-auto bg-dark fixed-top py-2 top-navbar">
+                        <div class="row">
+                            <div class="col-md-4">
+                                <h4 class="text-light text-uppercase mb-0">Dashboard</h4>
+                            </div>
+                            <div class="col-md-5">
+                                <form>
+                                    <div class="input-group">
+                                        <input type="text" class="form-control search-input" placeholder="Search..." />
+                                        <button type="button" class="btn btn-white search-button"><i
+                                                class="fas fa-search text-danger"></i></button>
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="col-md-3">
+                                <ul class="navbar-nav">
+                                    <li class="nav-item icon-parent"><a href="#" class="nav-link icon-bullet"><i
+                                                class="fas fa-comments text-muted fa-lg"></i></a></li>
+                                    <li class="nav-item icon-parent"><a href="#" class="nav-link icon-bullet"><i
+                                                class="fas fa-bell text-muted fa-lg"></i></a></li>
+                                    <li class="nav-item ml-md-auto"><a href="#" class="nav-link"><i
+                                                class="fas fa-sign-out-alt text-danger fa-lg"></i></a></li>
+
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <!--End top nav-->
+                    <section>
+                        <div class="container-fluid">
+                            <div class="row">
+                                <div class="col-xl-10 col-lg-9 col-md-8 ml-auto">
+                                    <div class="row pt-md-5 mt-md-3 mb-5 ml-10">
+                                        
+                                       <!-- card Sale-->
+                                        <div class="col-md-3 p-2">
+                                            <div class="card card-common">
+                                                <div class="card-body">
+                                                    <div class="d-flex justify-content-between">
+                                                        <i class="fas fa-shopping-cart fa-3x text-warning"></i>
+                                                        <div class="text-right text-secondary">
+                                                            <h5>Sales</h5>
+                                                            <h3>$135.000</h3>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="card-footer text-secondary">
+                                                    <i class="fas fa-sync mr-3"></i>
+                                                    <span>Updated Now</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                          <!-- End Sale-->
+
+                                           <!-- card expenses-->
+                                        <div class="col-md-3 p-2">
+                                            <div class="card card-common">
+                                                <div class="card-body">
+                                                    <div class="d-flex justify-content-between">
+                                                        <i class="fas fa-money-bill-alt fa-3x text-success"></i>
+                                                        <div class="text-right text-secondary">
+                                                            <h5>Expenses</h5>
+                                                            <h3>$135.000</h3>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="card-footer text-secondary">
+                                                    <i class="fas fa-sync mr-3"></i>
+                                                    <span>Updated Now</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                          <!-- End expenses-->
+
+                                           <!-- card User-->
+                                        <div class="col-md-3 p-2">
+                                            <div class="card card-common">
+                                                <div class="card-body">
+                                                    <div class="d-flex justify-content-between">
+                                                        <i class="fas fa-users fa-3x text-info"></i>
+                                                        <div class="text-right text-secondary">
+                                                            <h5>Users</h5>
+                                                            <h3>$135.000</h3>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="card-footer text-secondary">
+                                                    <i class="fas fa-sync mr-3"></i>
+                                                    <span>Updated Now</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                          <!-- End Sale-->
+
+                                           <!-- card Sale-->
+                                        <div class="col-md-3 p-2">
+                                            <div class="card card-common">
+                                                <div class="card-body">
+                                                    <div class="d-flex justify-content-between">
+                                                        <i class="fas fa-chart-line fa-3x text-danger"></i>
+                                                        <div class="text-right text-secondary">
+                                                            <h5>Visitors</h5>
+                                                            <h3>$135.000</h3>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                                <div class="card-footer text-secondary">
+                                                    <i class="fas fa-sync mr-3"></i>
+                                                    <span>Updated Now</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                          <!-- End Sale-->
+
+
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </section>
+                    <!-- cards -->
+
+                    <!--end cards-->
                 </div>
-                <ul class="navbar-nav flex-column mt-4">
-                    <li class="nav-item"><a href="#" class="nav-link text-white p-3 mb-2 current"><i class="fas fa-home text-light fa-lg mr-3"></i>Dashboard</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link text-white p-3 mb-2 sidebar-link"><i class="fas fa-user text-light fa-lg mr-3"></i>Profile</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link text-white p-3 mb-2 sidebar-link"><i class="fas fa-envelope text-light fa-lg mr-3"></i>Inbox</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link text-white p-3 mb-2 sidebar-link"><i class="fas fa-shopping-cart text-light fa-lg mr-3"></i>Sales</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link text-white p-3 mb-2 sidebar-link"><i class="fas fa-home text-light fa-lg mr-3"></i>Analytic</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link text-white p-3 mb-2 sidebar-link"><i class="fas fa-home text-light fa-lg mr-3"></i>Charts</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link text-white p-3 mb-2 sidebar-link"><i class="fas fa-home text-light fa-lg mr-3"></i>Tables</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link text-white p-3 mb-2 sidebar-link"><i class="fas fa-home text-light fa-lg mr-3"></i>Setting</a></li>
-                </ul>
-             </div>
-                <!--end sidebar-->
-               </div>
             </div>
         </div>
 
